Product Spacing Fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,11 @@ html {
 body {
   font-family: Helvetica;
   width: 960px;
+  background-color: white;
+}
+
+div {
+  display: block;
 }
 
 /*Header Content*/
@@ -47,7 +52,9 @@ body {
   padding-left: 3rem;
   margin-left: 5rem;
   color: white;
-  z-index: 5;
+  padding: 2em 3em;
+  position: relative;
+  top: 9em;
 }
 
 .headline p {
@@ -82,38 +89,46 @@ body {
 /*Main Content*/
 
 .main {
-  background-color: white;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .items {
   display: flex;
-  align-content: center;
-  width: 90%;
-  margin-bottom: 3rem;
+  justify-content: space-around;
+  margin: 3rem 0 0 0;
 }
 
-.item img {
+.item {
+  width: 30%;
+}
+
+.item-image {
   border: 4px solid black;
-  height: 9rem;
-  padding: 2rem;
-  margin: 3rem 3rem 0 3rem;
+  padding: 2em 0;
+  height: 9em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.item p {
-  text-align: center;
+.item-image img {
+  max-width: 8rem;
+}
+
+.item-description {
+  display: block;
+  background-color: black;
   color: white;
-  font-weight: bold;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  margin-top: 8px solid black;
+  text-align: center;
+  padding: 0.5em;
 }
 
 .logistics {
   display: flex;
-  align-content: center;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: left;
-  width: 90%;
+  margin-top: 3rem;
 }
 
 .location, .hours {
@@ -127,4 +142,17 @@ body {
   font-weight: bold;
   padding: 1rem 0 1rem 2rem;
   margin-bottom: 0.25rem;
+}
+
+/*Footer*/
+
+#footer {
+  display: flex;
+  align-content: center;
+  color: white;
+  height: 5rem;
+}
+
+#footer p {
+  width: 75%;
 }
